base/argocd/manifests/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.blaze64.xyz`)
      priority: 10
      services:
        - name: argocd-server
          port: 80

    - kind: Rule
      match: Host(`argocd.blaze64.xyz`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
